# denovogear

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  DeNovoGear.sublime-project  README  README.md  README.txt  app.js  build.js  build.sh  design.md  example_graph.graphml  index.html  package.json
Tests/: CMakeLists.txt  CheckProcessTest.cmake
Tests/DngCall/: BamTest.cmake.in  CramTest.cmake.in  RunTest.cmake.in  TadTest.cmake.in  VcfTest.cmake.in
Tests/DngDnm/: AutoTest.cmake.in  RunTest.cmake.in
Tests/DngLoglike/: BamTest.cmake.in  CramTest.cmake.in  RunTest.cmake.in  TadTest.cmake.in  VcfTest.cmake.in
Tests/DngPhaser/: DataTest.cmake.in  RunTest.cmake.in
Tests/DngPileup/: BamTest.cmake.in  RunTest.cmake.in
Tests/Unit/: CMakeLists.txt  boost_test_helper.h  dng.cc  testing.h  xorshift64.h
Tests/Unit/dng/: ReadGroups.cc  cigar.cc  find_mutation.cc  find_mutations.cc  find_mutations_ylinked.cc  fixture_random_family.h  fixture_read_test_from_file.h  fixture_read_trio_from_file.h  fixture_trio_workspace.h  genotype.cc  library.cc  log_probability.cc  multithread.cc  mutation.cc  mutation_stats.cc  pedigree.cc  peel.cc  probability.cc  regions.cc  relationship_graph.cc  relationship_graph2.cc  relationship_graph_helper.h  relationship_graph_m12.cc  relationship_graph_peeling.cc  relationship_graph_trio.cc  seq.cc  stats.cc  utility.cc
Tests/Unit/hts/: bam.cc  bcf.cc  hts.cc
Tests/script/R/: generate_family_data.R  mutation_function.R  test_find_mutation.R  test_find_mutation_ylinked.R  test_mutation.R  test_relationship_graph_peeling.R  test_relationship_graph_peeling_Y.R
denovogear-code/: #indelLike.cc#  .gitignore  .gitignore~  .travis.yml  001ops  01ops  CEU2.bcf.REMOVED.git-id  CEU2.ped  CMakeLists.txt  DNMs  GTs.REMOVED.git-id  GTs_all_liftovered.REMOVED.git-id  GTs_all_positions.REMOVED.git-id  GTs_formatted.REMOVED.git-id  GTs_formatted_liftovered.REMOVED.git-id  Indel_dist_WGS.docx  Makefile  Makefile~  NA19240.recal.bam.bai.REMOVED.git-id  README  README.md  README.txt  SNPposns  ToDo  Untitled.txt  WGS_DNMs_partial  a.out  bcf2Paired.c  bcf2Qcall.c  ch1_GTs.REMOVED.git-id  ch4_DNMs  ch4_GTs.REMOVED.git-id  denovogear  denovogear.REMOVED.git-id  denovogear.cc  denovogear.h  dngOP_INDEL_pp0p1  dngOP_INDEL_pp0p1.REMOVED.git-id  dng_CEUwhole2op  dng_CEUwhole2op.REMOVED.git-id  (+39 more)
denovogear-code/Modules/: cmake_uninstall.cmake.in
denovogear-code/denovogear.dSYM/Contents/: Info.plist
denovogear-code/examples/: sample_CEU.bcf.REMOVED.git-id  sample_CEU.bcf.bci  sample_CEU.ped  sample_paired.ped  sample_phasing_GTs_f
denovogear-code/newmat/: example  example.REMOVED.git-id  garch  garch.REMOVED.git-id  include.h  libnewmat.a.REMOVED.git-id  nl_ex  nl_ex.REMOVED.git-id  nm11.htm.REMOVED.git-id  nm_ex1  nm_ex1.REMOVED.git-id  nm_ex2  nm_ex2.REMOVED.git-id  nm_ex3  nm_ex3.REMOVED.git-id  sl_ex  test_exc  test_exc.REMOVED.git-id  tmt  tmt.REMOVED.git-id
denovogear-code/src/: #phaser.cc#  CMakeLists.txt  bcf2Paired.c  bcf2Paired.cc  bcf2Qcall.c  bcf2Qcall.cc  bcf2Qcall.cc.orig  bcfutils.c  denovogear.cc  denovogear.h  dng  dng.sh  indelLike.cc  makeLookup.cc  makeLookup.h  pairLike.cc  parser.h  pedParser.c  pedParser.cc  pedParser.h  phaser.cc  phaser.h  snpLike.cc
denovogear-code/src/newmat/: CMakeLists.txt  garch.REMOVED.git-id  newmat11.tar.gz.REMOVED.git-id  nl_ex  nm_ex2  nm_ex2.REMOVED.git-id  nm_ex3  test_exc  tmt.REMOVED.git-id
denovogear-code/src/utils/: CMakeLists.txt  bcf.c  call1.c  dict.c  dict.h  glf.h  readseq.c  sam_view.h  vcf.c
denovogear-code/test/op/: dnm_XS_op
denovogear-code/test/src/: dnm.t
denovogear-code/utils/: Makefile  README.txt  array.c  array.h  bcfutils.c  dng_lookup_readme.txt  hotornot.pl  qcall.h  readseq.h  sam_view.c  snp_lookup.txt
src/: CMakeLists.txt  bcf2Paired.cc  bcf2Qcall.cc  build.txt  denovogear.cc  denovogear.h  dng-call.cc  dng-call_test.cc  dng-dnm.cc  dng-dnm.h  dng-loglike.cc  dng-phaser.cc  dng-pileup.cc  dng.sh  dng.sh.in  dng_vcf_parser.js  dng_vis.js  indelLike.cc  lookup.h  makeLookup.cc  makeLookup.h  pairLike.cc  parser.h  pedParser.cc  pedParser.h  ped_parser.js  pedigr.js  phaser.cc  phaser.h  snpLike.cc  treecall2.py  treecall2.py.in  vcf.js  version.h.in
src/contrib/newmat/: newmat6.cpp
src/dnm/: bcf2Paired.cc  bcf2Qcall.cc  denovogear.h  dng-dnm.h  indelLike.cc  makeLookup.cc  makeLookup.h  pairLike.cc  parser.h  pedParser.cc  pedParser.h  phaser.h  snpLike.cc
src/helpers/: find_mutation_helper.h
src/html/: index.html
src/include/dng/: app.h  call_mutations.h  cigar.h  constant.h  depths.h  fileio.h  find_mutation.h  find_mutations.h  find_mutations_abstract.h  find_mutations_xlinked.h  genotyper.h  (+27 more)
src/js/: dng_vis.js
src/lib/: CMakeLists.txt  ad.cc  bam.cc  call.cc  call_mutations.cc  find_mutation.cc  find_mutations.cc  find_mutations_abstract.cc  find_mutations_xlinked.cc  find_mutations_ylinked.cc  genotyper.cc  inheritance_model.cc  likelihood.cc  log1p_exp_neg_table.tcc  loglike.cc  mutation.cc  mutation_stats.cc  newick.cc  pedigree.cc  pedigree_peeler.cc  pedigree_v2.cc  peeling.cc  pileup.cc  probability.cc  read_group.cc  regions.cc  relationship_graph.cc  stats.cc  utility.cc  vcf.cc
src/mutmap/: .eslintrc.yml  CMakeLists.txt  build.py  bundle.js  index.html  mutmap.py.in  mutmap.sh.in  package.json  pedigree_and_layout.R.in
src/newmat/: tmt
src/py-editdist/: ChangeLog  MANIFEST  PKG-INFO  README  TODO  editdist.c  py-editdist.spec  setup.py.in  test.py
src/r/: pedigree_and_layout.R
src/treecall/: CMakeLists.txt  README.md  geno.py  memoize.py  setup.py.in  tree_est.py  treecall.py.in  treecall.sh.in  utils.py
src/utils/: CMakeLists.txt  Makefile  boost_utils.h  vcf_utils.h
src/vt/: assert_helper.h  boost_test_helper.h  calculateProbs.cc  find_mutation.h  find_mutation_getter.cpp  find_mutation_getter.h  find_mutation_test.cpp  peeling_test.cpp  vcf_helper.h
test/: CMakeLists.txt  boost_test_helper.h  test_dng_vcf_parser.js
test/data/: test.ped
test/op/: dnm_XD_op  dnm_auto_op
test/src/: boost_test_helper.h
(+152 files in other folders)
